test/acceptance/parsing/failing/include-infinite-loop2.spun
include "./include-infinite-loop3"
